welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if ( bOk || b > a ){
    ^